[metadata]
name = nibe-mqtt
version = attr: nibe_mqtt.__version__
author = Jevgeni Kiski
author_email = yozik04@gmail.com
description = Nibe heatpump MQTT integration
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nibe modbus library nibegw mqtt
url = https://github.com/yozik04/nibe-mqtt
project_urls =
    Bug Tracker = https://github.com/yozik04/nibe-mqtt/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = LGPL 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    nibe >=2.7.0,<3.0.0
    paho_mqtt>=1.5.0,<2.0.0
    voluptuous>=0.13.0
    pyyaml>=6.0
    python-slugify>=6.0.0

[options.package_data]
* = *.json, *.md

[options.entry_points]
console_scripts =
    nibe-mqtt = nibe_mqtt.console_scripts.nibe_mqtt_service:main

[options.packages.find]
exclude =
    tests*

[flake8]
max-line-length = 88
extend-ignore = E203

[coverage:report]
show_missing = true
